add regdump app

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,3 +1,14 @@
+CC = clang
+OBJDUMP = objdump
+DBG = gdb
+# DBG = lldb
+# CC = riscv32-unknown-elf-gcc
+# OBJDUMP = riscv32-unknown-elf-objdump
+# DBG = riscv32-unknown-elf-gdb
+
 all:
-	clang main.c -o test.elf
-	objdump -d test.elf > test.elf.dis
+	$(CC) main.c -o test.elf
+	$(OBJDUMP) -d test.elf > test.elf.dis
+
+dbg:
+	$(DBG) test.elf
